use enums for the outcome and shapes
* use of #[derive(Serialize)] makes some default serialization of the
  enums and structs to json/strings, but should be fine for now
* this also renamed "result" to "outcome" in the json
* demo_draw_result function now take an input param and replies with the
  same

--- a/static/game.html
+++ b/static/game.html
@@ -65,11 +65,10 @@ function got_result(data) {
     var results = document.querySelector("ol#results");
     var li = document.createElement("li");
     var span = document.createElement("span");
-    span.textContent = `Outcome: ${data.result} You: ${data.your_attack} They: ${data.their_attack}`;
+    span.textContent = `Outcome: ${data.outcome} You: ${data.your_attack} They: ${data.their_attack}`;
     li.appendChild(span);
     results.appendChild(li);
 }
-
 </script>
 </body>
 </html>
